--- a/.github/workflows/fork.yml
+++ b/.github/workflows/fork.yml
@@ -35,7 +35,7 @@ jobs:
           git remote add upstream https://github.com/midudev/minimalist-portfolio-json.git
           git fetch upstream
           git checkout main
-          git merge upstream/main
+          git merge --allow-unrelated-histories upstream/main
 
       - name: Create branch
         run: |
