--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,7 +1,9 @@
 # Runs when PR is created, updated, or reopened
 
 name: Deploy to Firebase Hosting on PR
-'on': pull_request
+'on': 
+  pull_request:
+  workflow_dispatch:
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
@@ -49,7 +51,7 @@ jobs:
           curl -sSL -H "Authorization: token $GITHUB_TOKEN" -d "{\"body\": \"$COMMENT\"}" -H "Content-Type: application/json" -X POST "https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${{ github.event.pull_request.number }}/comments"
 
       - name: Send Notification
-        if: success() # failure()
+        if: failure() # success(), failure()
         uses: dawidd6/action-send-mail@v2
         with:
           server_address: smtp.gmail.com
@@ -64,4 +66,4 @@ jobs:
           # comma-separated string, send email to
           to: nhimanshujain@gmail.com
           # from email name
-          from: Repo himanshujain.dev
+          from: GitHub Actions
