--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -51,7 +51,7 @@ jobs:
           curl -sSL -H "Authorization: token $GITHUB_TOKEN" -d "{\"body\": \"$COMMENT\"}" -H "Content-Type: application/json" -X POST "https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${{ github.event.pull_request.number }}/comments"
 
       - name: Send Notification
-        if: failure() # success(), failure()
+        if: success() # success(), failure()
         uses: dawidd6/action-send-mail@v2
         with:
           server_address: smtp.gmail.com
