--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,9 +1,7 @@
 # Runs when PR is created, updated, or reopened
 
 name: Deploy to Firebase Hosting on PR
-'on': 
-  pull_request:
-  workflow_dispatch:
+'on': ["pull_request", "workflow_dispatch"]
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
