--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,7 +1,7 @@
 # Runs when PR is merged
 
 name: Deploy to Firebase Hosting on merge
-'on':
+"on":
   push:
     branches:
       - main
@@ -14,15 +14,22 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '21.6.1'
+          node-version: "23.11.0"
       - name: Check node.js version
         run: node -v
       - name: Install pnpm
-        run: npm install -g pnpm@8.15.3
+        run: npm install -g pnpm@10.8.0
       - name: Check pnpm version
         run: pnpm -v
       - name: Install dependencies
         run: pnpm install
+      - name: Check dependencies version
+        run: |
+          pnpm view @astrojs/check version
+          pnpm view astro version
+          pnpm view firebase-tools version
+          pnpm view hotkeypad version
+          pnpm view typescript version
       - name: Build
         run: pnpm build
       - name: Enable Firebase experiments
@@ -30,8 +37,8 @@ jobs:
       - name: Firebase Deploy
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_HIMANSHUJAIN_DEV }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_HIMANSHUJAIN_DEV }}"
           channelId: live
           projectId: himanshujain-dev
         env:
