--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.5.4",
-    "astro": "4.4.0",
-    "firebase-tools": "13.3.0",
-    "hotkeypad": "0.1.0",
-    "typescript": "5.3.3"
-  }
+    "@astrojs/check": "0.9.4",
+    "astro": "5.6.1",
+    "firebase-tools": "14.1.0",
+    "hotkeypad": "1.0.1",
+    "typescript": "5.8.3"
+  },
+  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
